edit: Overwiev section in SparkDoc: RDD Programming Guide

--- a/scala/doc/scala_doc_2_RDD.ipynb
+++ b/scala/doc/scala_doc_2_RDD.ipynb
@@ -13,27 +13,33 @@
    "source": [
     "## [Overview](https://spark.apache.org/docs/latest/rdd-programming-guide.html#overview)\n",
     "\n",
-    "**High level** her Spark uygulaması ***driver program*** denen bir şeyden oluşur. Bu ***driver program*** kullanıcının *main* fonksiyonunu çalıştırır ve **cluster** üzerinde çeşitli paralel işlemleri execute eder.\n",
+    "**EN**: \n",
+    "At a high level, every Spark application consists of a driver program that runs the user’s main function and executes various parallel operations on a cluster. The main abstraction Spark provides is a resilient distributed dataset (RDD), which is a collection of elements partitioned across the nodes of the cluster that can be operated on in parallel. RDDs are created by starting with a file in the Hadoop file system (or any other Hadoop-supported file system), or an existing Scala collection in the driver program, and transforming it. Users may also ask Spark to persist an RDD in memory, allowing it to be reused efficiently across parallel operations. Finally, RDDs automatically recover from node failures.\n",
+    "<br/>\n",
     "\n",
-    "Spark' ın sağladığı **<font color=\"red\">main absraction</font>** ***resilient distributed dataset*** (RDD) olmaktadır. RDD, bir elemanlar kümesidir(collection of elements). RDD, cluster üzerindeki node' lar boyunca partition' lara (bölümlere) ayrılmıştır. RDD' lerin node' lara bölünmesi sayesinde paralel işlemler yapılabilmektedir.\n",
+    "**TR**:\n",
     "\n",
-    "RDD' ler çeşitli formattaki dosyalardan ya da driver program içindeki collectionlardan oluşturulabilir (collectiondan kasıt sanırım scala dizileri ya da hangi dili kullanıyorsanız).\n",
+    "Yüksek seviyeli her Spark uygulaması bir ***driver program***' dan oluştur. ***driver program*** dediğimiz şey ise kullanıcının ana fonksiyonunu çalıştıran ve cluster üzerinde çeşitli paralel işlemler yapan yapıdır.\n",
     "\n",
-    "Eğer bir RDD' yi çok sık şekilde kullanacaksanız Spark' a bu RDD' yi cache al diyebiliyorsunuz.\n",
+    "> Spark applications run as independent sets of processes on a cluster, coordinated by the SparkContext object in your main program (called the driver program).\n",
     "\n",
-    "RDD' ler node' larda oluşan hatalardan otomatik olarak recover edilirler Sanırım hiç hata olmamış hallerine geri döndürülürler.\n",
+    "Spark' ın sağladığı **main absraction** **RDD** (*resilient distributed dataset*)' dir. RDD, bir cluster' daki node' lar boyunca dağılmış **element**' ler kümesidir. **Benim anladığım şu:** Elimizde 5 makineli bir cluster ve 3GB dosya olsun. Bu dosya, bu cluster' da dağıtık bir şekilde tutulur. Yani dosya parçalara ayrılır ve 5 bilgisayara da dağıtılır. Spark ise bu cluster' daki dağıtık veriyi RDD denen bir şeye dönüştürerek dosya üzerinde işlem yapabilir. Farklı makinelerdeki aynı dosyanın parçalarına -Hadoop' ta olduğu gibi- bütünleşikmiş gibi işlem yapılır.\n",
+    "\n",
+    "RDD HDFS' deki bir dosyadan (ya da diğer Hadoop destekli dosya sistemlerinden) ya da **driver program**daki Scala collection(array)' undan transform edililerek oluşturulur. Kullanıcılar Spark' a bu RDD' nin RAM(in-memory)' de kalıcı olarak durmasını isteyebilirler ki bu durum paralel işlemlerde verimlilik getirir. **Daha türkçesi:** RDD' yi ya kodla oluşturabilirsin ya da bir yerden dosya okuyarak oluşturabilirsin. Oluşturduktan sonra RAM' de kalmasını sağlayabilirsin ki bu sayede verimlilik sağlarsın(mesela o RDD' ye sürekli erişilme ihtiyacı varsa).\n",
     "\n",
     "___\n",
     "\n",
-    "Spark' ın **<font color=\"red\">ikinci absraction</font>**' u paralel işlemler kullanılan ***shared variables*** tir.\n",
+    "**EN:**\n",
     "\n",
-    "Sanırım Spark' ta Default olarak şöyle bir şey gerçekleştiriliyor: Spark' ta paralel bir işlem başladığında node' lara task' lar dağıtılıyor. Bu task' lar için gerekli olan variable' lar node' larda çalışacak olan fonksiyona kopyalanıyor.\n",
+    "A second abstraction in Spark is shared variables that can be used in parallel operations. By default, when Spark runs a function in parallel as a set of tasks on different nodes, it ships a copy of each variable used in the function to each task. Sometimes, a variable needs to be shared across tasks, or between tasks and the driver program. Spark supports two types of shared variables: broadcast variables, which can be used to cache a value in memory on all nodes, and accumulators, which are variables that are only “added” to, such as counters and sums.    \n",
     "\n",
-    "Bazen bir tane değişkenin tasklar arasında ya da task ile driver program arasında shared edilmesi gerekiyormuş. Bu özelliğin var olma sebebi bu.\n",
+    "<br/>\n",
     "\n",
-    "Sparkta iki tane shared variables türü varmış:\n",
-    "***broadcast variables***: Tüm nodeların memory' lerindeki bir value' yi cache almak için kullanılır. (Ne demek anlamadım.)\n",
-    "***accumulators***: Yanlızca \"added\" değişkenlermiş. Örneğin counters ve sum. (Ne demek anlamadım)"
+    "**TR:**\n",
+    "\n",
+    "Spark' ın **second abstraction**' ı paralel işlemlerde kullanılan ***shared variables***' dır. Spark' da farklı nodelar üzerinde birden fazla paralel task çalıştıracak olsun. Spark her bir task için kullanılacak değişkenleri gerekli node' a iletir. Bu süreç Spark' ın default davranışırdır. Lakin bazen tasklar arasında ya da tasklar ile driver program arasında bazı değişkenlerin **share** edilmesi gerekir. İşte ***shared variables*** bu durumlarda kullanılır. İki tür ***shared variables*** vardır: tüm node' larda bellekte(sanırım Disk) bulunan bir değeri cache(RAM)' e alan broadcast, yalnızca eklenen(added) değişkenler olan accumulators.\n",
+    "\n",
+    "> ***shared variables*** tiplerini anlamadım.\n"
    ]
   },
   {
