start: read write csv

--- a/scala/doc/scala_doc_2_RDD.ipynb
+++ b/scala/doc/scala_doc_2_RDD.ipynb
@@ -19,13 +19,13 @@
     "\n",
     "**TR**:\n",
     "\n",
-    "Yüksek seviyeli her Spark uygulaması bir ***driver program***' dan oluştur. ***driver program*** dediğimiz şey ise kullanıcının ana fonksiyonunu çalıştıran ve cluster üzerinde çeşitli paralel işlemler yapan yapıdır.\n",
+    "Yüksek seviyeli her Spark uygulaması bir ***driver program***' dan oluşur. ***driver program*** dediğimiz şey ise kullanıcının ana fonksiyonunu çalıştıran ve cluster üzerinde çeşitli paralel işlemler yapan yapıdır.\n",
     "\n",
     "> Spark applications run as independent sets of processes on a cluster, coordinated by the SparkContext object in your main program (called the driver program).\n",
     "\n",
     "Spark' ın sağladığı **main absraction** **RDD** (*resilient distributed dataset*)' dir. RDD, bir cluster' daki node' lar boyunca dağılmış **element**' ler kümesidir. **Benim anladığım şu:** Elimizde 5 makineli bir cluster ve 3GB dosya olsun. Bu dosya, bu cluster' da dağıtık bir şekilde tutulur. Yani dosya parçalara ayrılır ve 5 bilgisayara da dağıtılır. Spark ise bu cluster' daki dağıtık veriyi RDD denen bir şeye dönüştürerek dosya üzerinde işlem yapabilir. Farklı makinelerdeki aynı dosyanın parçalarına -Hadoop' ta olduğu gibi- bütünleşikmiş gibi işlem yapılır.\n",
     "\n",
-    "RDD HDFS' deki bir dosyadan (ya da diğer Hadoop destekli dosya sistemlerinden) ya da **driver program**daki Scala collection(array)' undan transform edililerek oluşturulur. Kullanıcılar Spark' a bu RDD' nin RAM(in-memory)' de kalıcı olarak durmasını isteyebilirler ki bu durum paralel işlemlerde verimlilik getirir. **Daha türkçesi:** RDD' yi ya kodla oluşturabilirsin ya da bir yerden dosya okuyarak oluşturabilirsin. Oluşturduktan sonra RAM' de kalmasını sağlayabilirsin ki bu sayede verimlilik sağlarsın(mesela o RDD' ye sürekli erişilme ihtiyacı varsa).\n",
+    "RDD HDFS' deki bir dosyadan (ya da diğer Hadoop destekli dosya sistemlerinden) ya da **driver program**daki Scala collection(array)' undan transform edilerek oluşturulur. Kullanıcılar Spark' a bu RDD' nin RAM(in-memory)' de kalıcı olarak durmasını isteyebilirler ki bu durum paralel işlemlerde verimlilik getirir. **Daha türkçesi:** RDD' yi ya elle oluşturabilirsin ya da bir yerden dosya okuyarak oluşturabilirsin. Oluşturduktan sonra RAM' de kalmasını sağlayabilirsin ki bu sayede verimlilik sağlarsın(mesela o RDD' ye sürekli erişilme ihtiyacı varsa).\n",
     "\n",
     "___\n",
     "\n",
@@ -37,7 +37,7 @@
     "\n",
     "**TR:**\n",
     "\n",
-    "Spark' ın **second abstraction**' ı paralel işlemlerde kullanılan ***shared variables***' dır. Spark' da farklı nodelar üzerinde birden fazla paralel task çalıştıracak olsun. Spark her bir task için kullanılacak değişkenleri gerekli node' a iletir. Bu süreç Spark' ın default davranışırdır. Lakin bazen tasklar arasında ya da tasklar ile driver program arasında bazı değişkenlerin **share** edilmesi gerekir. İşte ***shared variables*** bu durumlarda kullanılır. İki tür ***shared variables*** vardır: tüm node' larda bellekte(sanırım Disk) bulunan bir değeri cache(RAM)' e alan broadcast, yalnızca eklenen(added) değişkenler olan accumulators.\n",
+    "Spark' ın **second abstraction**' ı paralel işlemlerde kullanılan ***shared variables***' dır. Spark' da farklı nodelar üzerinde birden fazla paralel task çalıştırılacak olsun. Spark her bir task için kullanılacak değişkenleri gerekli node' a iletir. Bu süreç Spark' ın default davranışıdır. Lakin bazen tasklar arasında ya da tasklar ile driver program arasında bazı değişkenlerin **share** edilmesi gerekir. İşte ***shared variables*** bu durumlarda kullanılır. İki tür ***shared variables*** vardır: tüm node' lardaki bellekte(sanırım Disk) bulunan bir değeri cache(RAM)' e alan broadcast, yalnızca eklenen(added) değişkenler olan accumulators.\n",
     "\n",
     "> ***shared variables*** tiplerini anlamadım.\n"
    ]
