edit: Overview, add: linking with spark, initializng spark, using the shell

--- a/scala/doc/scala_doc_2_RDD.ipynb
+++ b/scala/doc/scala_doc_2_RDD.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "**TR**:\n",
     "\n",
-    "Yüksek seviyeli her Spark uygulaması bir ***driver program***' dan oluşur. ***driver program*** dediğimiz şey ise kullanıcının ana fonksiyonunu çalıştıran ve cluster üzerinde çeşitli paralel işlemler yapan yapıdır.\n",
+    "Yüksek seviyede her Spark uygulaması bir ***driver program***' dan oluşur. ***driver program*** dediğimiz şey ise kullanıcının ana fonksiyonunu çalıştıran ve cluster üzerinde çeşitli paralel işlemler yapan yapıdır. [Spark applications run as independent sets of processes on a cluster, coordinated by the SparkContext object in your main program (called the driver program)]\n",
     "\n",
-    "> Spark applications run as independent sets of processes on a cluster, coordinated by the SparkContext object in your main program (called the driver program).\n",
+    "> 6 makineli bir cluster var. Bu cluster' da bir tane master ve 5 tane slave makinesi var. Master, 5 slave makineyi de yöneten makinedir. Benim tahminim Spark' taki master makinede SparkContext oluşturulur yani ***driver program*** ve Spark 5 slave makine üzerinde paralel işlemler gerçekleştirir.\n",
     "\n",
     "Spark' ın sağladığı **main absraction** **RDD** (*resilient distributed dataset*)' dir. RDD, bir cluster' daki node' lar boyunca dağılmış **element**' ler kümesidir. **Benim anladığım şu:** Elimizde 5 makineli bir cluster ve 3GB dosya olsun. Bu dosya, bu cluster' da dağıtık bir şekilde tutulur. Yani dosya parçalara ayrılır ve 5 bilgisayara da dağıtılır. Spark ise bu cluster' daki dağıtık veriyi RDD denen bir şeye dönüştürerek dosya üzerinde işlem yapabilir. Farklı makinelerdeki aynı dosyanın parçalarına -Hadoop' ta olduğu gibi- bütünleşikmiş gibi işlem yapılır.\n",
     "\n",
@@ -40,6 +40,66 @@
     "Spark' ın **second abstraction**' ı paralel işlemlerde kullanılan ***shared variables***' dır. Spark' da farklı nodelar üzerinde birden fazla paralel task çalıştırılacak olsun. Spark her bir task için kullanılacak değişkenleri gerekli node' a iletir. Bu süreç Spark' ın default davranışıdır. Lakin bazen tasklar arasında ya da tasklar ile driver program arasında bazı değişkenlerin **share** edilmesi gerekir. İşte ***shared variables*** bu durumlarda kullanılır. İki tür ***shared variables*** vardır: tüm node' lardaki bellekte(sanırım Disk) bulunan bir değeri cache(RAM)' e alan broadcast, yalnızca eklenen(added) değişkenler olan accumulators.\n",
     "\n",
     "> ***shared variables*** tiplerini anlamadım.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "515b091c",
+   "metadata": {},
+   "source": [
+    "## [Linking with Spark](https://spark.apache.org/docs/latest/rdd-programming-guide.html#linking-with-spark)\n",
+    "Bu kısmı yazmadım."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cdef2cf",
+   "metadata": {},
+   "source": [
+    "## [Initializing Spark](https://spark.apache.org/docs/latest/rdd-programming-guide.html#initializing-spark)\n",
+    "\n",
+    "EN:\n",
+    "\n",
+    "The first thing a Spark program must do is to create a SparkContext object, which tells Spark how to access a cluster. To create a SparkContext you first need to build a SparkConf object that contains information about your application.\n",
+    "\n",
+    "TR:\n",
+    "\n",
+    "Bir Spark programının yapması gereken ilk şey `SparkContext` objesinden bir nesne üretmektir. `SparkContext` nesnesi Spark' a cluster' a nasıl erişmesi gerektiğini bildiren yapıdır. `SparkContext` oluşturmak için ise `SparkConf` objesi oluşturulmalıdır. `SparkConf` objesi oluşturduğunuz uygulama ile ilgili bilgileri tutan nesnedir.\n",
+    "\n",
+    "----\n",
+    "\n",
+    "EN:\n",
+    "\n",
+    "Only one SparkContext should be active per JVM. You must stop() the active SparkContext before creating a new one.\n",
+    "\n",
+    "TR:\n",
+    "\n",
+    "`JVM` başına sadece bir tane `SparkContext` aktif edilebilir. [Benim anladığım bir makine de aynı anda tek Spark job' ı çalışabilir.] Yeni bir `SparkContext` oluşturmak için aktif olanı `stop()` etmeniz gerekmektedir.\n",
+    "\n",
+    "------\n",
+    "\n",
+    "```scala\n",
+    "val conf = new SparkConf().setAppName(appName).setMaster(master)\n",
+    "new SparkContext(conf)\n",
+    "```\n",
+    "\n",
+    "EN:\n",
+    "\n",
+    "The appName parameter is a name for your application to show on the cluster UI. master is a Spark, Mesos or YARN cluster URL, or a special “local” string to run in local mode. In practice, when running on a cluster, you will not want to hardcode master in the program, but rather launch the application with spark-submit and receive it there. However, for local testing and unit tests, you can pass “local” to run Spark in-process.\n",
+    "\n",
+    "TR:\n",
+    "\n",
+    "`appName` parametresi uygulamanız için Cluster UI' da gözükecek isimdir. [Cluster (birden fazla makineyi bağlayarak oluşturulan yapı) üzerinde çalıştırmadım o sebeple bilmiyor lakin Spark' ı local olarak çalıştırdığında bir UI linki veriyor: 192.XXX.XXX.XXX gibi bundan bahsediyor sanırım Cluster UI diye]. `master` ifadesi ise ya [Spark, Mesos or YARN cluster URL](https://spark.apache.org/docs/latest/submitting-applications.html#master-urls) olmalı ya da Spark' ın local mode' u olan \"local\" ibaresi olmalı. Bir cluster üzerinde çalıştığınızda siz master parametresine sabit bir değer atamak istemeyeceksiniz bunun yerine spark-submit kullanacaksınız. Bla Bla Bla.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "308e2c87",
+   "metadata": {},
+   "source": [
+    "## [Using the Shell](https://spark.apache.org/docs/latest/rdd-programming-guide.html#using-the-shell)\n",
+    "\n",
+    "Bakmadım buna da. Gereksiz geldi bana."
    ]
   },
   {
