--- a/scala/doc/scala_doc_2_RDD.ipynb
+++ b/scala/doc/scala_doc_2_RDD.ipynb
@@ -126,17 +126,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "data: Array[Int] = Array(1, 2, 3, 4, 5)\n",
-       "distData: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[0] at parallelize at <console>:26\n"
+       "Intitializing Scala interpreter ..."
       ]
      },
-     "execution_count": 2,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Spark Web UI available at http://192.168.1.152:4040\n",
+       "SparkContext available as 'sc' (version = 3.2.0, master = local[*], app id = local-1643827632440)\n",
+       "SparkSession available as 'spark'\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "data: Array[Int] = Array(1, 2, 3, 4, 5)\n",
+       "distData: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[0] at parallelize at <console>:25\n"
+      ]
+     },
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
