--- a/scala/doc/scala_doc_2_RDD.ipynb
+++ b/scala/doc/scala_doc_2_RDD.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5693c5c0",
    "metadata": {},
    "source": [
     "# [RDD Programming Guide](https://spark.apache.org/docs/latest/rdd-programming-guide.html)"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6c0f34d",
    "metadata": {},
    "source": [
     "## [Overview](https://spark.apache.org/docs/latest/rdd-programming-guide.html#overview)\n",
@@ -104,29 +106,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "61d29b5b",
    "metadata": {},
    "source": [
     "## [Resilient Distributed Datasets (RDDs)](https://spark.apache.org/docs/latest/rdd-programming-guide.html#resilient-distributed-datasets-rdds)\n",
     "\n",
-    "Spark ***Resilient Distributed Datasets*** kavramı etrafında döner. RDD, paralel olarak çalıştırılabilen, hata toleranslı elementler koleksiyonudur (**fault-tolerant** collection of elements).\n",
+    "Spark ***Resilient Distributed Datasets*** kavramı etrafında döner. RDD, paralel olarak çalıştırılabilen, hata toleranslı elementler koleksiyonudur (**fault-tolerant** collection of elements). \n",
+    "\n",
+    "> fault-tolerant ne demek bilmiyorum\n",
     "\n",
     "RDD iki şekilde oluşturulur: <br/>\n",
-    "birincisi driver programda bulunan colloection' u ***parallelizing*** ederek. <br/>\n",
-    "ikincisi external storage system' da bulunan bir dataset' e referans vererek. external storage system, such as a shared filesystem, HDFS, HBase, or any data source offering a Hadoop InputFormat.\n"
+    "1. driver programda bulunan colloction' u ***parallelizing(paralelize)*** ederek. [Bir tane array' den oluşturarak]\n",
+    "2. external storage system' da bulunan bir dataset' e referans vererek. external storage system, such as a shared filesystem, HDFS, HBase, or any data source offering a Hadoop InputFormat. **(DB, Text, JSON, CSV, HDFS vs vs gibi kaynaklardan oluşturarak)**\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "b66c5dbd",
    "metadata": {},
    "source": [
-    "### [Parallelized Collections](https://spark.apache.org/docs/latest/rdd-programming-guide.html#parallelized-collections)\n",
-    "\n",
-    "Bir parallelized collection, sizin driver programınızda bulunan collection' ı parametre olarak olan ***SparkContext***' in ***parallelize*** metodu ile oluşturulur."
+    "### [Parallelized Collections](https://spark.apache.org/docs/latest/rdd-programming-guide.html#parallelized-collections)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "81e875f0",
    "metadata": {},
    "outputs": [
     {
@@ -137,39 +142,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Spark Web UI available at http://192.168.1.152:4040\n",
-       "SparkContext available as 'sc' (version = 3.2.0, master = local[*], app id = local-1643827632440)\n",
-       "SparkSession available as 'spark'\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "data: Array[Int] = Array(1, 2, 3, 4, 5)\n",
-       "distData: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[0] at parallelize at <console>:25\n"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "val data = Array(1, 2, 3, 4, 5)\n",
-    "val distData = sc.parallelize(data) //RDD oluştu ve paralel işlem yapılabilir artık.\n",
-    "// Normally, Spark tries to set the number of partitions automatically based on your cluster. \n",
-    "// However, you can also set it manually by passing it as a second parameter to parallelize "
+    "val distData = sc.parallelize(data) //RDD oluştu ve paralel işlem yapılabilir artık."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "f21d1b4e",
    "metadata": {},
    "source": [
     "Parallel collection' larda önemli bir konuda bu RDD' nin kaç tane partition' a bölüneceği. Spark normalde partion' lama işlemlerini kendi yaparmış. Ama elle biz de verebilirmişiz. Elle vermek istersek `sc.parallelize(data, 10)` bu şekilde yapabiliriz.\n",
@@ -179,6 +161,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0dd64719",
    "metadata": {},
    "source": [
     "## [External Datasets](https://spark.apache.org/docs/latest/rdd-programming-guide.html#external-datasets)\n",
@@ -191,6 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "6a219dbe",
    "metadata": {},
    "outputs": [
     {
@@ -214,6 +198,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "526f14b3",
    "metadata": {},
    "source": [
     "Some notes on reading files with Spark:\n",
@@ -226,6 +211,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00faba58",
    "metadata": {},
    "source": [
     "## [RDD Operations](https://spark.apache.org/docs/latest/rdd-programming-guide.html#rdd-operations)\n",
@@ -241,6 +227,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "838ea742",
    "metadata": {},
    "source": [
     "### [Basic](https://spark.apache.org/docs/latest/rdd-programming-guide.html#basics)\n",
@@ -265,6 +252,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1f56e2fa",
    "metadata": {},
    "source": [
     "### [Basic](https://spark.apache.org/docs/latest/rdd-programming-guide.html#basics)"
@@ -272,6 +260,9 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
   "kernelspec": {
    "display_name": "spylon-kernel",
    "language": "scala",
