aylar sonra gelen commit

--- a/scala/doc/scala_doc_2_RDD.ipynb
+++ b/scala/doc/scala_doc_2_RDD.ipynb
@@ -111,13 +111,13 @@
    "source": [
     "## [Resilient Distributed Datasets (RDDs)](https://spark.apache.org/docs/latest/rdd-programming-guide.html#resilient-distributed-datasets-rdds)\n",
     "\n",
-    "Spark ***Resilient Distributed Datasets*** kavramı etrafında döner. RDD, paralel olarak çalıştırılabilen, hata toleranslı elementler koleksiyonudur (**fault-tolerant** collection of elements). \n",
+    "Spark ***Resilient Distributed Datasets*** kavramı etrafında döner. RDD, paralel olarak çalışabilen, hata toleranslı elementler koleksiyonudur (**fault-tolerant** collection of elements). \n",
     "\n",
     "> fault-tolerant ne demek bilmiyorum\n",
     "\n",
     "RDD iki şekilde oluşturulur: <br/>\n",
-    "1. driver programda bulunan colloction' u ***parallelizing(paralelize)*** ederek. [Bir tane array' den oluşturarak]\n",
-    "2. external storage system' da bulunan bir dataset' e referans vererek. external storage system, such as a shared filesystem, HDFS, HBase, or any data source offering a Hadoop InputFormat. **(DB, Text, JSON, CSV, HDFS vs vs gibi kaynaklardan oluşturarak)**\n"
+    "1. driver programda bulunan colloction' u ***parallelizing(paralelize)*** ederek. [Bir tane array' den oluşturarak] ki bu şekilde oluşturulan RDD' lere `parallelized Collections` denir.\n",
+    "2. Bir tane dataset' ten oluşturarak. Bu dataset bir DB' den olabilir, dosyalar olabilir, veritabanından çekilebilir vs vs.\n"
    ]
   },
   {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "81e875f0",
    "metadata": {},
    "outputs": [
