RDD operations' a kadar bitti

--- a/scala/doc/scala_doc_2_RDD.ipynb
+++ b/scala/doc/scala_doc_2_RDD.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "Spark ***Resilient Distributed Datasets*** kavramı etrafında döner. RDD, paralel olarak çalışabilen, hata toleranslı elementler koleksiyonudur (**fault-tolerant** collection of elements). \n",
     "\n",
-    "> fault-tolerant ne demek bilmiyorum\n",
+    "> fault-tolerant: Cluster' daki nodelardan birinin ya da birkaçının çökmesi haline yapılan işlemin bölünmeden devam etmesi yeteneğidir.\n",
     "\n",
     "RDD iki şekilde oluşturulur: <br/>\n",
     "1. driver programda bulunan colloction' u ***parallelizing(paralelize)*** ederek. [Bir tane array' den oluşturarak] ki bu şekilde oluşturulan RDD' lere `parallelized Collections` denir.\n",
@@ -130,23 +130,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "81e875f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Intitializing Scala interpreter ..."
+       "data: Array[Int] = Array(1, 2, 3, 4, 5)\n",
+       "distData: org.apache.spark.rdd.RDD[Int] = ParallelCollectionRDD[6] at parallelize at <console>:26\n"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "val data = Array(1, 2, 3, 4, 5)\n",
-    "val distData = sc.parallelize(data) //RDD oluştu ve paralel işlem yapılabilir artık."
+    "val distData = sc.parallelize(data) // Array' deki integer değerleri RDD' ye kopyalanıyor."
    ]
   },
   {
@@ -154,7 +156,7 @@
    "id": "f21d1b4e",
    "metadata": {},
    "source": [
-    "Parallel collection' larda önemli bir konuda bu RDD' nin kaç tane partition' a bölüneceği. Spark normalde partion' lama işlemlerini kendi yaparmış. Ama elle biz de verebilirmişiz. Elle vermek istersek `sc.parallelize(data, 10)` bu şekilde yapabiliriz.\n",
+    "Parallel collection' larda önemli bir konu da RDD' nin kaç tane partition' a bölüneceği. Spark, cluster' daki her bir partition için bir tane task koşturur. Genel olarak cluster' daki CPU başına 2-4 partition yapmak isteyebilirsiniz. Normalde Spark, RDD' yi partitionlara bölme işlemini cluster' a bakarak kendi yapar lakin elle biz de verebilirmişiz. Elle vermek istersek `sc.parallelize(data, 10)` bu şekilde yapabiliriz.\n",
     "\n",
     "> Bazı yerlerde `partions` yerine `slices` ifadesi geçebilirmiş."
    ]
@@ -193,7 +195,9 @@
     "import org.apache.spark.rdd.RDD;\n",
     "\n",
     "val distFile: RDD[String] = sc.textFile(\"../README.md\") //distFile' in türünü atamasını Scala' nın bulması yerine\n",
-    "// kendim atadığım için compile edilirken daha hızlı çalışacaktır."
+    "// kendim atadığım için compile edilirken daha hızlı çalışacaktır.\n",
+    "\n",
+    "//RDD' deki her bir element README.md dosyasındaki satırlardır."
    ]
   },
   {
@@ -202,11 +206,11 @@
    "metadata": {},
    "source": [
     "Some notes on reading files with Spark:\n",
-    "- Bir tane ana bilgisayar var ve ona bağlı köle bilgisayarlar (worker node) var. Ana bilgisayarın local' ındeki file' a köle bilgisayarlar tabiki de erişemeyecek. Erişebilmesi için ya dosyayayı workerlara kopyala ya da internet üzerinden erişmelerini sağla\n",
-    "- All of Spark’s file-based input methods, including textFile, support running on directories, compressed files, and wildcards as well. For example, you can use textFile(\"/my/directory\"), textFile(\"/my/directory/*.txt\"), and textFile(\"/my/directory/*.gz\").\n",
-    "- `textFile` metoduna isteğe bağlı RDD' nin partition' ını belirlemek için ikinci bir parametre daha verebiliyorsun. Default olarak bu partition' lara bölme işlemini `Spark zaten dosyadaki her bir block için bir tane partition oluşturarak yapıyor (HDFS' te her bir block 128MB' tır)`. İşte textFile metodunun ikinci parametresi sayesinde bu sayıyı arttırabiliyoruz. block değerinden aşağı bir partition sayısı belirleyemiyoruz. Default block size: 128MB. block size 256MB yapılamaz. `Default partition değeri 5 ise bu değeri parametre ile 4 yapamazsın. Çünkü partiton size' ı 128MB' den büyük olur.`\n",
+    "- Eğer local' inizden dosya okuyacaksanız dosya cluster' daki node' lar tarafından da erişebilir olmalı. Bunun için ya dosyayı diğer node' lara kopyalayın ya da network-mounted shared file system kullanın.\n",
+    "- Spark' ın file-based bütün metotları (textFile da dahil) \"directories, compressed files, and wildcards\" destekler: textFile(\"/my/directory\"), textFile(\"/my/directory/*.txt\"), and textFile(\"/my/directory/*.gz\"). When multiple files are read, `the order of the partitions` depends on the order the files are returned from the filesystem. It may or may not, for example, follow the lexicographic ordering of the files by path. Within a partition, elements are ordered according to their order in the underlying file.\n",
+    "- `textFile` metoduna optinal olarak RDD' nin partition' ını belirlemek için ikinci bir parametre daha verebiliyorsun. Default olarak dosyanın her bir block' una karşılık Spark bir tane partition oluşturur (HDFS' te block' ların boyutu 128MB' tir). Bu ikinci parametre ile block' ların daha çok sayı partition oluşturabilirsiniz. Dikkat: Block' lardan daha az sayıda partition oluşturamazsınız.\n",
     "\n",
-    "> Devamıda vardı yazmadım. İlgili olan başlığa tıklayarak gerekli linke gidebilir."
+    "> Devamıda vardı yazmadım. İlgili olan başlığa tıklayarak gerekli linke gidebilir. Çünkü bana başlangıç seviyesi için gereksiz geldiler."
    ]
   },
   {
